package com.amr.shop.cmmj.common_java_context.services.user;

public enum UserStatusEnum {
  NULL_OBJECT,
  ACTIVE,
  INACTIVE
}
